@@ -1,3 +1,5 @@
+ * Fixed a bug which caused problems with connecting to Cassandra under heavy load (#185)
+
 1.0.0 RC 4
  * Upgrade Java driver for Cassandra to 2.0.4. (#171)
  * Added missing CassandraRDD#getPreferredLocations to improve data-locality. (#164)
